# train-tracks-vertex-diameter

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: train_track.cpp  train_track.hpp
src/: main.cpp
